# oxedium_v3

./: .env.example  .gitignore  Anchor.toml  LICENSE  README.md
programs/oxedium-program/: Cargo.toml
programs/oxedium-program/src/: lib.rs
programs/oxedium-program/src/components/: calculate_fee_amount.rs  calculate_staker_yield.rs  chekers.rs  compute_swap_math.rs  conf_fee_bps.rs  fees_setting.rs  mod.rs  raw_amount_out.rs  snapshot_oxe_checkpoints.rs
programs/oxedium-program/src/events/: claim_event.rs  mod.rs  oxe_claim_event.rs  oxe_stake_event.rs  oxe_unstake_event.rs  staking_event.rs  swap_event.rs  unstaking_event.rs
programs/oxedium-program/src/instructions/: mod.rs
programs/oxedium-program/src/instructions/admin/: collect.rs  init_admin.rs  init_oxe_global.rs  init_vault.rs  mod.rs  update_admin.rs  update_treasury.rs  update_vault.rs
programs/oxedium-program/src/instructions/oxe_staker/: mod.rs  oxe_claim.rs  oxe_stake.rs  oxe_unstake.rs
programs/oxedium-program/src/instructions/staker/: claim.rs  staking.rs  unstaking.rs
programs/oxedium-program/src/instructions/trader/: swap.rs
programs/oxedium-program/src/states/: admin.rs  mod.rs  oxe_checkpoint.rs  oxe_global.rs  oxe_global_state.rs  oxe_staker.rs  oxe_vault_position.rs  staker.rs  vault.rs
programs/oxedium-program/src/utils/: constants.rs  errors.rs
programs/oxedium-program/tests/: calculate_fee_amount.rs  calculate_staker_yield.rs  compute_swap_math.rs  conf_fee_bps.rs  fees_setting.rs  oxe_staking_flow.rs  raw_amount_out.rs  trading_simulation.rs
