[package]
name = "oxedium-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oxedium_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.32.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.32.1", features = ["metadata"] }
pyth-solana-receiver-sdk ="1.0.1"
uint = "0.10.0"

[dev-dependencies]
anchor-lang = { version = "0.32.1" }
pyth-solana-receiver-sdk = "1.0.1"
